[refactor] Java21: Use SequencedCollection  (readability)